# xeBlogChallenge2022

./: .envrc  .gitignore  Cargo.toml  JOURNAL.md  README.md  flake.nix  fly.toml  posts.db  posts.db-shm  posts.db-wal  uuid.c
src/: admin.rs  auth.rs  blog.rs  datatypes.rs  db.rs  main.rs  model.rs
static/: contact.html  index.html
templates/: admin.html  admin_add.html  admin_list.html  base.html  blog.html  blog_post.html
