[package]
name = "ajaxbits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0"
actix-files = "0.6"
actix-session = "0.5"
r2d2 = "0.8"
r2d2_sqlite = "0.20"

pulldown-cmark = "0.8.0"
hotwatch = "0.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
walkdir = "2"
axum = "0.2"
tower-http = { version = "0.1", features = ["fs"] }
chrono = {version = "0.4", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
color-eyre = "0.5"
rusqlite = "0.27.0"
env_logger = "0.9"
tinytemplate = "1.2"

[profile.dev.package.backtrace]
opt-level = 3


